Fix bugs with scrollbars reappearing and preview sizes

--- a/src/orb/index.css
+++ b/src/orb/index.css
@@ -14,10 +14,6 @@
 .OrbGrid-cell-header {
 }
 
-.ReactVirtualized__Grid__innerScrollContainer {
-  overflow: hidden;
-}
-
 @keyframes anim-info-updated {
     0% {
       background-color: red;
